--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,12 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
+
+mod_version = 1.0.0
+maven_group = com.github.tartaricacid
+archives_base_name = i18nUpdateMod-NLTS
+
+minecraft_version=1.19
+mapping_channel=official
+forge_version=41.1.0
+
+patchouli_version=1.19-76-SNAPSHOT
