--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,10 +1,10 @@
 modLoader="javafml"
-loaderVersion="[39,)"
+loaderVersion="[40,)"
 license="MIT"
 
 [[mods]]
     modId="i18nupdatemod"
     version="${file.jarVersion}"
-    displayName="I18nUpdateMod Non-LTS"
+    displayName="I18nUpdateMod2 Non-LTS"
     authors="TartaricAcid, baka-gourd, exzhawk"
     description="自动汉化更新模组（非长期支持版）"
