--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ minecraft {
             workingDirectory project.file('run')
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            // arg "-mixin.config=i18n.mixin.cfg.json"
+            arg "-mixin.config=i18n.mixin.json"
             mods {
                 i18nupdatemod2 {
                     source sourceSets.main
@@ -47,7 +47,7 @@ minecraft {
             workingDirectory project.file('run')
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            // arg "-mixin.config=i18n.mixin.cfg.json"
+            arg "-mixin.config=i18n.mixin.json"
             mods {
                 i18nupdatemod2 {
                     source sourceSets.main
@@ -75,14 +75,14 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title"     : "i18nupdatemod2",
-                "Specification-Vendor"    : "i18nupdatemod2sareus",
-                "Specification-Version"   : "1",
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "i18nupdatemod2sareus",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-                // "MixinConfigs"            : "i18n.mixin.cfg.json"
+                "Specification-Title": "i18nupdatemod2",
+                "Specification-Vendor": "i18nupdatemod2sareus",
+                "Specification-Version": "1",
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${version}",
+                "Implementation-Vendor": "i18nupdatemod2sareus",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs":"i18n.mixin.cfg.json"
         ])
     }
 }
