--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 mod_version = 1.0.0
 maven_group = com.github.tartaricacid
-archives_base_name = i18nUpdateMod-NLTS
+archives_base_name = i18nUpdateMod-NLTS-Forge
 
 minecraft_version=1.19
 mapping_channel=official
