--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,53 +1,24 @@
 name: Gradle Build
 
-on:
-  workflow_dispatch:
-    branches:
-      - 1.18
-  push:
-    branches:
-      - 1.18
-    paths:
-      - 'src/main/**'
+on: [ pull_request, push ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
-          server-id: github
-          settings-path: ${{ github.workspace }}
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
+          distribution: 'temurin'
+          java-version: 17
+      - name: Grant execute permission for Gradlew
+        run: chmod +x gradlew
       - name: Build with Gradle
-        run: |
-          chmod +x ./gradlew
-          ./gradlew build
-
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v2.2.2
+        run: ./gradlew build
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
         with:
-          name: I18nUpdateMod2
-          path: ./build/libs/*.jar
-
-      - name: Cleanup Gradle Cache
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+          name: Artifacts
+          path: build/libs
