--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="MIT"
 
 [[mods]]
     modId="i18nupdatemod"
-    version="${file.jarVersion}"
+    version="${version}"
     displayName="I18nUpdateMod Non-LTS"
     authors="TartaricAcid, baka-gourd, exzhawk"
     description="自动汉化更新模组"
