--- a/build.gradle
+++ b/build.gradle
@@ -1,92 +1,68 @@
-buildscript {
-    repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        maven {
-            name "Sponge"
-            url "https://repo.spongepowered.org/repository/maven-public/"
-            content { includeGroup "org.spongepowered" }
-        }
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
-    }
+plugins {
+    id 'dev.architectury.loom' version '0.12.0-SNAPSHOT'
+    id 'maven-publish'
 }
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'eclipse'
-apply plugin: 'org.spongepowered.mixin'
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
+archivesBaseName = project.archives_base_name
 version = "${project.mod_version}-${project.minecraft_version}"
-group = "${project.maven_group}"
-archivesBaseName = "${project.archives_base_name}"
+group = project.maven_group
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
-
-mixin {
-    disableAnnotationProcessorCheck = true
-}
-
-minecraft {
-    mappings channel: "${project.mapping_channel}", version: "${project.minecraft_version}"
-    runs {
-        client {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            arg "-mixin.config=i18n.mixin.json"
-            mods {
-                i18nupdatemod2 {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        server {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            arg "-mixin.config=i18n.mixin.json"
-            mods {
-                i18nupdatemod2 {
-                    source sourceSets.main
-                }
-            }
-        }
+loom {
+    silentMojangMappingsLicense()
+    forge {
+        mixinConfigs = [
+                "i18n.mixins.json"
+        ]
     }
 }
 
-sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    // Patchouli
     maven { url "https://maven.blamejared.com" }
-    flatDir { dirs 'libs' }
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
-    implementation fg.deobf("vazkii.patchouli:Patchouli:${project.patchouli_version}")
-    annotationProcessor('org.spongepowered:mixin:0.8.2')
-    annotationProcessor('org.spongepowered:mixin:0.8.2:processor')
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings loom.officialMojangMappings()
+    forge "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
+    modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+
 }
 
-jar {
-    manifest {
-        attributes([
-                "Specification-Title": "i18nupdatemod2",
-                "Specification-Vendor": "i18nupdatemod2sareus",
-                "Specification-Version": "1",
-                "Implementation-Title": project.name,
-                "Implementation-Version": "${version}",
-                "Implementation-Vendor": "i18nupdatemod2sareus",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "MixinConfigs":"i18n.mixin.cfg.json"
-        ])
+processResources {
+    inputs.property "version", project.version
+
+    filesMatching("META-INF/mods.toml") {
+        expand "version": project.version
     }
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+tasks.withType(JavaCompile).configureEach {
+    it.options.release = 17
+    options.encoding = "UTF-8"
+}
+
+java {
+    withSourcesJar()
+}
+
+jar {
+    from("LICENSE") {
+        rename { "${it}_${project.archivesBaseName}"}
+    }
+}
+
+// configure the maven publication
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+
+    repositories {
+    }
 }
