--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
-mod_version = 1.0.0
+mod_version = 1.0.1
 maven_group = com.github.tartaricacid
 archives_base_name = i18nUpdateMod-NLTS-Forge
 
@@ -10,3 +10,5 @@ mapping_channel=official
 forge_version=41.1.0
 
 patchouli_version=1.19-76-SNAPSHOT
+
+loom.platform=forge
