--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,3 +8,4 @@ license="MIT"
     displayName="I18nUpdateMod Non-LTS"
     authors="TartaricAcid, baka-gourd, exzhawk"
     description="自动汉化更新模组"
+    logoFile="assets/i18n/icon.png"
