--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ apply plugin: 'eclipse'
 apply plugin: 'org.spongepowered.mixin'
 
 version = "${project.mod_version}-${project.minecraft_version}"
-group = "${project.maven_group}"
-archivesBaseName = "${project.archives_base_name}"
+group = project.maven_group
+archivesBaseName = project.archives_base_name
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
@@ -62,7 +62,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 repositories {
     // Patchouli
     maven { url "https://maven.blamejared.com" }
-    flatDir { dirs 'libs' }
+    //flatDir { dirs 'libs' }
 }
 
 dependencies {
@@ -82,7 +82,7 @@ jar {
                 "Implementation-Version": "${version}",
                 "Implementation-Vendor": "i18nupdatemod2sareus",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "MixinConfigs":"i18n.mixin.cfg.json"
+                "MixinConfigs":"i18n.mixin.json"
         ])
     }
 }
