--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
-mod_version = 1.0.1-Hotfix
+mod_version = 1.0.2
 maven_group = com.github.tartaricacid
 archives_base_name = i18nUpdateMod-NLTS-Forge
 
