move to Architectury Loom

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,16 @@
-org.gradle.jvmargs=-Xmx4G
-org.gradle.daemon=false
-
-mod_version = 1.0.2
-maven_group = com.github.tartaricacid
-archives_base_name = i18nUpdateMod-NLTS-Forge
-
-minecraft_version=1.19.2
-mapping_channel=official
-forge_version=43.1.1
-
-patchouli_version=1.19-76-SNAPSHOT
-
+org.gradle.jvmargs=-Xmx1G
 loom.platform=forge
+
+# Base properties
+    minecraft_version=1.19.2
+    forge_version=1.19.2-43.0.8
+    yarn_mappings=1.19.2+build.3
+
+# Mod Properties
+    mod_version=1.0.2
+    maven_group=com.github.tartaricacid.i18nupdatemod
+    archives_base_name=i18nUpdateMod-NLTS-Forge
+    mod_id=i18nupdatemod
+    mod_author=TexTrue
+
+    patchouli_version=1.19-76-SNAPSHOT
