--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,32 @@
 plugins {
-    id 'dev.architectury.loom' version '0.12.0-SNAPSHOT'
-    id 'maven-publish'
+    id "dev.architectury.loom" version "0.12.0-SNAPSHOT"
+    id "maven-publish"
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
-version = "${project.mod_version}-${project.minecraft_version}"
+version = project.mod_version
 group = project.maven_group
 
 loom {
     silentMojangMappingsLicense()
+
     forge {
         mixinConfigs = [
-                "i18n.mixins.json"
+                "examplemod.mixins.json"
         ]
+        dataGen {
+            mod project.mod_id
+        }
+    }
+
+    launches {
+        data {
+            arg "--existing", file("src/main/resources").absolutePath
+        }
     }
 }
-
 
 repositories {
     maven { url "https://maven.blamejared.com" }
@@ -27,9 +35,9 @@ repositories {
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings loom.officialMojangMappings()
-    forge "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
+    // mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    forge "net.minecraftforge:forge:${project.forge_version}"
     modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
-
 }
 
 processResources {
@@ -40,9 +48,9 @@ processResources {
     }
 }
 
-tasks.withType(JavaCompile).configureEach {
-    it.options.release = 17
+tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+    options.release = 17
 }
 
 java {
@@ -50,8 +58,16 @@ java {
 }
 
 jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
+    manifest {
+        attributes([
+                "Specification-Title"     : project.mod_id,
+                "Specification-Vendor"    : project.mod_author,
+                "Specification-Version"   : "1",
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : version,
+                "Implementation-Vendor"   : project.mod_author,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
     }
 }
 
@@ -59,7 +75,12 @@ jar {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            from components.java
+            artifact(remapJar) {
+                builtBy remapJar
+            }
+            artifact(sourcesJar) {
+                builtBy remapSourcesJar
+            }
         }
     }
 
