--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ loom.platform=forge
     yarn_mappings=1.19.2+build.3
 
 # Mod Properties
-    mod_version=1.0.2
+    mod_version=1.0.2-1.19.2
     maven_group=com.github.tartaricacid.i18nupdatemod
     archives_base_name=i18nUpdateMod-NLTS-Forge
     mod_id=i18nupdatemod
