尝试修复因 build.gradle 内mixin文件名称错误导致的崩溃

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ loom {
 
     forge {
         mixinConfigs = [
-                "examplemod.mixins.json"
+                "i18n.mixins.json"
         ]
         dataGen {
             mod project.mod_id
