--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.3
 enabled_platforms=quilt,fabric,forge
 
-archives_base_name=examplemod
-mod_version=1.0.0
-maven_group=net.examplemod
+archives_base_name=I18nUpdateMod-NLTS-Architectury
+mod_version=1.0.0-Snapshot
+maven_group=com.github.tartaricacid.i18nupdatemod
 
 architectury_version=6.2.43
 
