--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,50 @@
-name: Gradle Build
+name: Build
 
-on: [ pull_request, push ]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
+  Build:
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - name: Get github short hash
+        id: github_short_hash
+        run: echo "result=$(git rev-parse --short "${{ github.sha }}")" >> $GITHUB_OUTPUT
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
+          distribution: 'adopt'
           java-version: 17
-      - name: Grant execute permission for Gradlew
-        run: chmod +x gradlew
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            .gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', 'build.gradle.kts') }}
       - name: Build with Gradle
-        run: ./gradlew build
-      - name: Upload build artifacts
+        run: |
+          chmod +x gradlew
+          ./gradlew build
+        timeout-minutes: 20
+      - name: Upload artifacts (fabric)
         uses: actions/upload-artifact@v3
         with:
-          name: Artifacts
-          path: build/libs
+          name: 1.19-${{ steps.github_short_hash.outputs.result }}-fabric
+          path: ${{ github.workspace }}/fabric/build/libs
+      - name: Upload artifacts (quilt)
+        uses: actions/upload-artifact@v3
+        with:
+          name: 1.19-${{ steps.github_short_hash.outputs.result }}-quilt
+          path: ${{ github.workspace }}/quilt/build/libs
+      - name: Upload artifacts (forge)
+        uses: actions/upload-artifact@v3
+        with:
+          name: 1.19-${{ steps.github_short_hash.outputs.result }}-forge
+          path: ${{ github.workspace }}/forge/build/libs
