--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,33 +1,33 @@
 modLoader = "javafml"
 loaderVersion = "[43,)"
-#issueTrackerURL = ""
-license = "Insert License Here"
+license = "MIT"
 
 [[mods]]
-modId = "examplemod"
+modId = "i18nupdatemod"
 version = "${version}"
-displayName = "Example Mod"
-authors = "Me!"
+displayName = "I18nUpdateMod Non-LTS Architectury"
+credits= "TartaricAcid, baka-gourd, exzhawk"
+authors = "TexTrue, TexTrueStudio"
 description = '''
-This is an example description! Tell everyone what your mod is about!
+自动汉化更新
 '''
 #logoFile = ""
 
-[[dependencies.examplemod]]
+[[dependencies.i18nupdatemod]]
 modId = "forge"
 mandatory = true
 versionRange = "[43,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.examplemod]]
+[[dependencies.i18nupdatemod]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19.2,)"
+versionRange = "[1.19,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.examplemod]]
+[[dependencies.i18nupdatemod]]
 modId = "architectury"
 mandatory = true
 versionRange = "[6.2.43,)"
