--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx1G
 
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.3
@@ -17,3 +17,6 @@ forge_version=1.19.2-43.0.8
 
 quilt_loader_version=0.17.2-beta.3
 quilt_fabric_api_version=4.0.0-beta.7+0.59.0-1.19.2
+
+patchouli_version=1.19.2-77
+patchouli_channel=SNAPSHOT
