--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -12,7 +12,7 @@ architectury {
 }
 
 loom {
-    accessWidenerPath = project(":common").loom.accessWidenerPath
+    //accessWidenerPath = project(":common").loom.accessWidenerPath
 }
 
 configurations {
@@ -32,6 +32,8 @@ dependencies {
         exclude group: "net.fabricmc"
         exclude group: "net.fabricmc.fabric-api"
     }
+
+    modImplementation "vazkii.patchouli:Patchouli:${rootProject.patchouli_version}-FABRIC-${rootProject.patchouli_channel}"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionQuilt")) { transitive false }
