--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
+# org.gradle.jvmargs=-Xmx1G
 
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.3
