--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -7,10 +7,6 @@ architectury {
     fabric()
 }
 
-loom {
-    //accessWidenerPath = project(":common").loom.accessWidenerPath
-}
-
 configurations {
     common
     shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
@@ -18,6 +14,8 @@ configurations {
     runtimeClasspath.extendsFrom common
     developmentFabric.extendsFrom common
 }
+
+project.archivesBaseName = rootProject.archivesBaseName + "-Fabric"
 
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
