--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -8,13 +8,7 @@ architectury {
 }
 
 loom {
-    //accessWidenerPath = project(":common").loom.accessWidenerPath
-
     forge {
-        //convertAccessWideners = true
-        //extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
-
-        //mixinConfig "examplemod-common.mixins.json"
         mixinConfig "i18n.forge.mixins.json"
     }
 }
@@ -26,6 +20,8 @@ configurations {
     runtimeClasspath.extendsFrom common
     developmentForge.extendsFrom common
 }
+
+project.archivesBaseName = rootProject.archivesBaseName + "-Forge"
 
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
