--- a/quilt/gradle/libs.versions.toml
+++ b/quilt/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.19.3"
-quilt_mappings = "1.19.3+build.11"
-quilt_loader = "0.18.1-beta.25"
+minecraft = "1.19.2"
+quilt_mappings = "1.19.2+build.21"
+quilt_loader = "0.17.6"
 
-quilt_standard_libraries = "4.0.0-beta.3+1.19.3"
-quilted_fabric_api = "5.0.0-alpha.7+0.70.0-1.19.3"
+quilt_standard_libraries = "3.0.0-beta.24+1.19.2"
+quilted_fabric_api = "4.0.0-beta.21+0.67.0-1.19.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
