--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Forge-Artifacts
-          path: build/libs
+          path: ${{ github.workspace }}/forge/build/libs
 
   fabric-build:
     runs-on: ubuntu-22.04
@@ -43,4 +43,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
          name: Fabric-Artifacts
-         path: build/libs
+         path: ${{ github.workspace }}/fabric/build/libs
