--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Forge-Artifacts
-          path: build/libs
+          path: ${{ github.workspace }}/forge/build/libs
 
   fabric-build:
     runs-on: ubuntu-22.04
@@ -43,25 +43,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
          name: Fabric-Artifacts
-         path: build/libs
-
-  quilt-build:
-    runs-on: ubuntu-22.04
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 17
-      - name: Build with Gradle
-        run: |
-          cd ${{ github.workspace }}/quilt
-          chmod +x gradlew
-          sh ./gradlew build
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: Quilt-Artifacts
-          path: build/libs
+         path: ${{ github.workspace }}/fabric/build/libs
