--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -7,7 +7,7 @@ loom.platform=forge
     yarn_mappings=1.17.1+build.65
 
 # Mod Properties
-    mod_version=1.0.3-1.17.1
+    mod_version=1.0.3beta1-1.17.1
     maven_group=com.github.tartaricacid.i18nupdatemod
     archives_base_name=i18nUpdateMod-NLTS-Forge
     mod_id=i18nupdatemod
