action修复，版本号更改

--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -7,7 +7,7 @@ loom.platform=forge
     yarn_mappings=1.19.3+build.5
 
 # Mod Properties
-    mod_version=1.0.3-1.19.3
+    mod_version=1.0.3beta1-1.19.3
     maven_group=com.github.tartaricacid.i18nupdatemod
     archives_base_name=i18nUpdateMod-NLTS-Forge
     mod_id=i18nupdatemod
