--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Forge-Artifacts
-          path: build/libs
+          path: ${{ github.workspace }}/forge/build/libs
 
   fabric-build:
     runs-on: ubuntu-22.04
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
          name: Fabric-Artifacts
-         path: build/libs
+         path: ${{ github.workspace }}/fabric/build/libs
 
   quilt-build:
     runs-on: ubuntu-22.04
@@ -64,4 +64,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Quilt-Artifacts
-          path: build/libs
+          path: ${{ github.workspace }}/quilt/build/libs
