清理，修复action，版本号更改

--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 1.0.3-1.19.2
+version = 1.0.3beta1-1.19.2
 maven_group = com.github.tartaricacid
 archives_base_name = i18nUpdateMod-NLTS-Quilt
 
