add config (WIP)

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -11,6 +11,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.blamejared.com" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -18,6 +19,7 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+	modApi "me.shedaniel.cloth:cloth-config-fabric:4.16.91"
 }
 
 processResources {
