--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'maven-publish'
 }
 
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -11,6 +11,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.blamejared.com" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -18,6 +19,10 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+
+	modApi ("me.shedaniel.cloth:cloth-config-fabric:5.3.63") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 }
 
 processResources {
@@ -29,7 +34,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
-	def targetVersion = 17
+	def targetVersion = 16
 	if (JavaVersion.current().isJava9Compatible()) {
 		 it.options.release = targetVersion
 	}
