--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "maven-publish"
 }
 
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -24,6 +24,7 @@ loom {
 
 repositories {
     maven { url "https://maven.blamejared.com" }
+    maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -32,6 +33,8 @@ dependencies {
     // mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     forge "net.minecraftforge:forge:${project.forge_version}"
     modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+
+    modApi "me.shedaniel.cloth:cloth-config-forge:5.3.63"
 }
 
 processResources {
@@ -44,7 +47,7 @@ processResources {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-    options.release = 17
+    options.release = 16
 }
 
 java {
