--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ version = "${version}"
 displayName = "I18nUpdateMod Non-LTS"
 logoFile="icon.png"
 credits="TartaricAcid, baka-gourd, exzhawk"
-authors="TexTrue"
+authors="TexTrue, TexTrueStudio"
 description='''
 自动汉化更新模组
 '''
@@ -24,5 +24,12 @@ side = "BOTH"
 modId = "minecraft"
 mandatory = true
 versionRange = "[1.16.4,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.i18nupdatemod]]
+modId = "cloth_config"
+mandatory = true
+versionRange = "[4,)"
 ordering = "NONE"
 side = "BOTH"
