--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -24,6 +24,7 @@ loom {
 
 repositories {
     maven { url "https://maven.blamejared.com" }
+    maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -32,6 +33,8 @@ dependencies {
     // mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     forge "net.minecraftforge:forge:${project.forge_version}"
     modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+
+    modApi "me.shedaniel.cloth:cloth-config-forge:9.0.94"
 }
 
 processResources {
