--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -9,6 +9,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.blamejared.com" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
