--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -9,6 +9,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.blamejared.com" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -18,6 +19,9 @@ dependencies {
 	modImplementation libs.bundles.qsl.qfapi
 
 	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+	modApi ("me.shedaniel.cloth:cloth-config-fabric:6.4.90"){
+		exclude(module: "fabric-api")
+	}
 }
 
 processResources {
