--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.12
 
 # Mod Properties
-	mod_version = 1.0.3beta1-1.17.1
+	mod_version = 1.0.3beta1-hotfix1-1.17.1
 	maven_group = com.github.tartaricacid
 	archives_base_name = i18nUpdateMod-NLTS-Fabric
 
