--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -11,17 +11,13 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.blamejared.com" }
-	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
-	modApi ("me.shedaniel.cloth:cloth-config-fabric:4.16.91") {
-		exclude(module: "fabric-api")
-	}
+	modImplementation "vazkii.patchouli:Patchouli_1.15-fabric:${project.patchouli_version}"
 }
 
 processResources {
