--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -2,14 +2,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.10
-	loader_version=0.14.12
+	minecraft_version=1.15.2
+	yarn_mappings=1.15.2+build.17
+	loader_version=0.11.2
 
 # Mod Properties
-	mod_version = 1.0.3beta1-1.16.5
+	mod_version = 1.0.3beta1-1.15.2
 	maven_group = com.github.tartaricacid
 	archives_base_name = i18nUpdateMod-NLTS-Fabric
 
 # Dependencies
-	patchouli_version=1.16.4-51-FABRIC-SNAPSHOT
+	patchouli_version=1.15.2-1.2-35-FABRIC
