--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -2,15 +2,15 @@ org.gradle.jvmargs=-Xmx1G
 loom.platform=forge
 
 # Base properties
-    minecraft_version=1.16.5
-    forge_version=1.16.5-36.2.39
-    yarn_mappings=1.16.5+build.10
+    minecraft_version=1.15.2
+    forge_version=1.15.2-31.2.57
+    yarn_mappings=1.15.2+build.17
 
 # Mod Properties
-    mod_version=1.0.3beta1-1.16.5
+    mod_version=1.0.3beta1-1.15.2
     maven_group=com.github.tartaricacid.i18nupdatemod
     archives_base_name=i18nUpdateMod-NLTS-Forge
     mod_id=i18nupdatemod
     mod_author=TexTrue
 
-    patchouli_version=1.16.4-51-SNAPSHOT
+    patchouli_version=1.15.2-1.2-35.2
